<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostJobActivity">
    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CreateJobs"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        />
    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"></TextView>

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/TitleHint"
            android:layout_marginLeft="65dp">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:id = "@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleLayout">
    <TextView
        android:id="@+id/JobCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/JobCategory"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        ></TextView>
    <Spinner
        android:id="@+id/JobCategorySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        ></Spinner>

        ></LinearLayout>
    <LinearLayout
        android:id="@+id/newCategoryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category">
        <TextView
            android:id="@+id/newCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NewCategory"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"></TextView>

        <EditText
            android:id="@+id/newCategoryEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginLeft="37dp">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/locationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newCategoryLayout">
        <TextView
            android:id="@+id/Location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Address"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/banner"></TextView>

        <EditText
            android:id="@+id/locationEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginLeft="42dp">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/contactLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationLayout">
        <TextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ContactNo"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            ></TextView>

        <EditText
            android:id="@+id/contactInfoEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:layout_marginLeft="20dp">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/salaryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactLayout">
        <TextView
            android:id="@+id/salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Salary"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            ></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Currency"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginLeft="55dp"
            ></TextView>

        <EditText
            android:id="@+id/salaryEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="number">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/HrsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salaryLayout">
        <TextView
            android:id="@+id/hrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WorkingHrs"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            ></TextView>

        <EditText
            android:id="@+id/HrsEditText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginLeft="19dp">
        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hrs/day"
            android:textColor="#000000"
            android:textStyle="bold"
            ></TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/workersLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HrsLayout">
        <TextView
            android:id="@+id/Workers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Workers"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            ></TextView>

        <EditText
            android:id="@+id/workersEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="43dp"
            android:hint="@string/WorkersNum"
            android:inputType="number"></EditText>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/descriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workersLayout">
        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Description"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            ></TextView>

        <EditText
            android:id="@+id/jobDescriptionEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:hint="@string/JobDetails"
            android:inputType="text">
        </EditText>
    </LinearLayout>
    <Button
        android:id="@+id/PostJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PostJob"
        android:textStyle="bold"
        android:backgroundTint="#2196F3"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionLayout"
        ></Button>

</androidx.constraintlayout.widget.ConstraintLayout>